<resources>
    <string name="app_name">Student Management</string>

    <!--Toolbar menus-->
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>

    <!--Drawer Menus-->
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="feed">My Feed</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--Login-->
    <string name="login_dummy">Login Dummy</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!--Login Validation-->
    <string name="empty_email">Please provide a non empty email.</string>
    <string name="invalid_email">Please provide a valid email.</string>
    <string name="empty_password">Please provide a non empty password.</string>

    <!--about fragment-->
    <string name="project_info">This sample app implements MVP architecture using Dagger2, GreenDao, RxJava, FastAndroidNetworking and PlaceholderView</string>
    <string name="link_mvp_blog">1. https://blog.mindorks.com</string>
    <string name="link_mvp_repo">2. https://github.com/MindorksOpenSource/android-mvp-architecture</string>
    <string name="link_mindorks_blog">3. https://blog.mindorks.com</string>
    <string name="link_mindorks_repo">4. https://github.com/MindorksOpenSource</string>
    <string name="version">"version"</string>

    <!--rating dialog-->
    <string name="rate_us">Rate Us</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars.</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others, in knowing some good things about this app.</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_not_provided_error">Please provide us stars.</string>
    <string name="rating_thanks">Thank you!</string>

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>

    <!--button-->
    <string name="later">Later</string>
    <string name="submit">Submit</string>

    <!--feed-->
    <string name="title">My Feed</string>
    <string name="open_source">Open Source</string>
    <string name="blog">Blog</string>

    <!--empty state-->
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="name_error">Enter a valid name</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="mobileerror">Enter a valid mobile</string>
    <string name="dateerror">Enter a valid date</string>
    <string name="marks_error">Enter a valid marks 0 to 100</string>
    <string name="percentage">Percentage : </string>
    <string name="name">Name : </string>
    <string name="english">English :</string>
    <string name="marathi">Marathi : </string>
    <string name="hindi">Hindi : </string>
    <string name="science">Science : </string>
    <string name="mathematics">Mathematics :</string>
    <string name="history">History :</string>
    <string name="str_text">Marks Details :</string>
    <string name="addnewdata">Enter data</string>
    <string name="studentdetail">Student details</string>
    <string name="success">Save successfully.</string>
    <string name="history_hint">Enter Marks for History</string>
    <string name="mathematics_hint">Enter Marks for Mathematics</string>
    <string name="science_hint">Enter Marks for Science</string>
    <string name="hindi_hint">Enter Marks for Hindi</string>
    <string name="marathi_hint">Enter Marks for Marathi</string>
    <string name="english_hint">Enter Marks for English</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender:</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
</resources>
