<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_add_student"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.studentmanagement.ui.addstudent.AddStudent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:padding="@dimen/ten_dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:layout_marginTop="@dimen/five_dp"/>


                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:layout_marginTop="@dimen/five_dp"/>


                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/five_dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender" />

                    <RadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/female" />
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="@dimen/ten_dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_subject_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/english_hint"
                    android:layout_marginTop="@dimen/five_dp"
                    android:inputType="number" />


                <EditText
                    android:id="@+id/et_subject_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/marathi_hint"
                    android:layout_marginTop="@dimen/five_dp"
                    android:inputType="number" />


                <EditText
                    android:id="@+id/et_subject_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hindi_hint"
                    android:layout_marginTop="@dimen/five_dp"
                    android:inputType="number" />


                <EditText
                    android:id="@+id/et_subject_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/science_hint"
                    android:layout_marginTop="@dimen/five_dp"
                    android:inputType="number" />


                <EditText
                    android:id="@+id/et_subject_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mathematics_hint"
                    android:layout_marginTop="@dimen/five_dp"
                    android:inputType="number" />


                <EditText
                    android:id="@+id/et_subject_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/history_hint"
                    android:layout_marginTop="@dimen/five_dp"
                    android:inputType="number" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btn_submit"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>